--- a/classList.html
+++ b/classList.html
@@ -388,7 +388,7 @@
 			<ul class="footer_list">
 				<li><a href="index.html"><img src="img/home.png"><span>首页</span></a></li>
 				<li><a href=""><img src="img/classred.png"><span>分类</span></a></li>
-				<li><a href=""><img src="img/money.png"><span>佣金</span></a></li>
+				<!-- <li><a href=""><img src="img/money.png"><span>佣金</span></a></li> -->
 				<li><a href="shopCar.html"><img src="img/cart.png"><span>购物车</span></a></li>
 				<li><a href="user.html"><img src="img/user.png"><span>我的</span></a></li>
 			</ul>
