--- a/shopCar.html
+++ b/shopCar.html
@@ -19,10 +19,10 @@
 		<div class="shopCar_list">
 			<div class="goods">
 				<input class="check" type="checkbox">
-				<a href=""><img class="goods-img" src="img/good.png" alt=""></a>
+				<a href=""><img class="goods-img" src="img/w1.jpg" alt=""></a>
 				<div class="note">
-					<h><a class="note-title" href="">水星家纺提花套件欧式简约提花四件套侧耳倾听1.5/1.8米床上用品</a></h>
-					<div class="arrt">1.8M床：使用2.2M×2.4M被芯</div>
+					<h><a class="note-title" href="">斯凯瑞金色童书第一辑全4册</a></h>
+					<div class="arrt">全套</div>
 					<div class="price">
 						<div>￥<span class="goodsprice">61.9</span></div>
 						<div class="cart_num">
@@ -35,12 +35,12 @@
 			</div>
 			<div class="goods">
 				<input class="check" type="checkbox">
-				<a href=""><img class="goods-img" src="img/good.png" alt=""></a>
+				<a href=""><img class="goods-img" src="img/w_6.jpg" alt=""></a>
 				<div class="note">
-					<h><a class="note-title" href="">水星家纺提花套件欧式简约提花四件套侧耳倾听1.5/1.8米床上用品</a></h>
-					<div class="arrt">1.8M床：使用2.2M×2.4M被芯</div>
+					<h><a class="note-title" href="">德国精选科学图画书</a></h>
+					<div class="arrt">插画版</div>
 					<div class="price">
-						<div>￥<span class="goodsprice">61.9</span></div>
+						<div>￥<span class="goodsprice">56</span></div>
 						<div class="cart_num">
 							<span class="reduce">-</span>
 							<input class="cart_amount" type="text" value="1" readonly="readonly">
