--- a/user.html
+++ b/user.html
@@ -54,8 +54,8 @@
 				<li><a href=""><img src="img/icon6.png" alt=""><span>我的积分</span></a></li>
 				<li><a href=""><img src="img/icon7.png" alt=""><span>团队成员</span></a></li>
 				<li><a href=""><img src="img/icon8.png" alt=""><span>申请提现</span></a></li>
-				<li><a href=""><img src="img/icon9.png" alt=""><span>推广二维码</span></a></li>
-				<li><a href=""><img src="img/icon10.png" alt=""><span>团队销售额</span></a></li>
+				<!-- <li><a href=""><img src="img/icon9.png" alt=""><span>推广二维码</span></a></li> -->
+				<!-- <li><a href=""><img src="img/icon10.png" alt=""><span>团队销售额</span></a></li> -->
 				<li><a href=""><img src="img/icon11.png" alt=""><span>其他</span></a></li>
 			</ul>
 			<ul class="serve_list02">
@@ -64,8 +64,8 @@
 				<li><a href=""><img src="img/icon14.png" alt=""><span>收藏</span></a></li>
 				<li><a href=""><img src="img/icon15.png" alt=""><span>足迹</span></a></li>
 				<li><a href=""><img src="img/icon16.png" alt=""><span>在线客服</span></a></li>
-				<li><a href=""><img src="img/icon17.png" alt=""><span>企业采购</span></a></li>
-				<li><a href=""><img src="img/icon18.png" alt=""><span>货源推荐</span></a></li>
+				<!-- <li><a href=""><img src="img/icon17.png" alt=""><span>企业采购</span></a></li> -->
+				<!-- <li><a href=""><img src="img/icon18.png" alt=""><span>货源推荐</span></a></li> -->
 			</ul>
 		</div>
 
