--- a/classList.html
+++ b/classList.html
@@ -29,13 +29,13 @@
 				<li>科普绘本
 				</li>
 				<li>文创产品</li>
-				<li>美食酒水</li>
+				<!-- <li>美食酒水</li>
 				<li>运动旅行</li>
 				<li>母婴亲子</li>
 				<li>数码家电</li>
 				<li>美妆洗护</li>
 				<li>珠宝首饰</li>
-				<li>日用百货</li>
+				<li>日用百货</li> -->
 			</ul>
 		</aside>
 
